templates/express/deployment_simple_express2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-express-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-express
  template:
    metadata:
      labels:
        env: dev
        app: simple-express
        version: V2
      annotations:
        description: "This is a very simple express service v2"
    spec:
      containers:
        - image: doroncomputer/simple_express:2.0
          name: simple-express
          ports:
            - name: http
              containerPort: 3000

          imagePullPolicy: "Always"
