templates/express/service_simple_express.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-express-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: simple-express
