templates/express/virtual_simple_express.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-express-virtual
spec:
  hosts:
    - simple-fastapi.com
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            exact: /message
        - uri:
            exact: /web

      route:
        - destination:
            # Can use full service name
            host: simple-express-service.default.svc.cluster.local
            subset: V1
            port:
              number: 3000
          weight: 80
        - destination:
            host: simple-express-service
            subset: V2
            port:
              number: 3000
          weight: 20
